# Kafka-Testing

./: .gitignore  CMakeLists.txt  GenericTest.cpp  LICENSE  README.md  docker-compose.yaml  generate_fake_user_data.py  names.json  notes.txt  producer.c  streemer.code-workspace  txt_file.txt  users.json
src/: CustomerDataFactory.cpp  CustomerDataFactory.hpp  IOQueue.cpp  IOQueue.hpp  InputStream.cpp  InputStream.hpp  KafkaStream.cpp  KafkaStream.hpp  MessageStream.cpp  MessageStream.hpp  Observer.hpp  RuntimeException.hpp  TestMain.cpp  common.c  config.json  consumer.c  customer_producer.cpp  main.cpp  test.json
src/Kafka/: BasicDeliveryReportCallback.hpp  KafkaProducerConfig.cpp  KafkaProducerConfig.hpp
src/Messages/: GenericMessage.hpp  JsonMessage.hpp
src/Streams/: InputStream.cpp  InputStream.hpp  JsonStream.cpp  JsonStream.hpp
